# website_editor

./: .env.example  .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md  install.sh  justfile  rustfmt.toml
bruno/: bruno.json  collection.bru
bruno/Auth/: Change Password.bru  Login.bru  Logout.bru  Refresh.bru  Signup.bru
bruno/Members/: Add Member.bru  List Members.bru  Remove Member.bru  Update Member.bru
bruno/Projects/: Create Project.bru  Delete Project.bru  Get Project.bru  List Projects.bru  Update Project.bru
bruno/Users/: Create User.bru  Delete User.bru  Get User.bru  List Users.bru  Reset Password.bru  Update User.bru
bruno/Versions/: Create Version.bru  Get Version.bru  List Versions.bru
bruno/environments/: Local.bru
database/migrations/: 20260521000000_create_items.sql  20260521120000_create_users.sql  20260521120100_create_projects.sql  20260521120200_create_project_members.sql  20260521120300_create_project_versions.sql  20260522000000_create_refresh_tokens.sql
docs/: openapi.yaml  scalar.html
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/extractors/: validated_json.rs
src/api/handler/: auth.rs  docs.rs  health.rs  item.rs  mod.rs  project.rs  project_member.rs  project_version.rs  user.rs
src/api/middlewares/: jwt.rs  mod.rs
src/api/routes/: mod.rs
tests/: auth_flow.rs
