[package]
name = "website_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tower-http = { version = "0.5", features = ["trace"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
